# matex

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
include/matex/: Lexer.hxx  Matex.hxx  Token.hxx
src/: CMakeLists.txt  Lexer.cxx  Matex.cxx  main.cxx
